tests/NormalTests/paczka1/fuzzy1/61380236.err
Error in line 1: wpZ S988 15,8
Error in line 5: wpZ A877 90,8
Error in line 28: Rcm5R A151 0,7
